--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,17 @@
   --footer-bg-color:  rgb(58, 84, 109);
 }
 
+/* header */
 header div.row > div {
   height: 50%;
   border: 1px solid black;
   background-color: blue;
 }
-/* header */
-
 header {
   background-color: var(--header-foot-bg-color);
   height: 80px;
 }
-header.container-fluid div.container {
+header.container-fluid div.row {
   height: 100%;
 }
 div.container div.row {
@@ -23,3 +22,7 @@ div.container div.row {
   padding: 0.5em;
 }
 
+/* main */
+main section.jumbotron {
+  background-color: var(--main-bg-color-green);
+}
