--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 }
 
 /* header */
-header div.row > div {
-  height: 50%;
+div.blue-header  {
+  height: 50px;
   border: 1px solid black;
   background-color: blue;
 }
@@ -17,15 +17,12 @@ header {
 header.container-fluid div.row {
   height: 100%;
 }
-div.container div.row {
-  height: 100%;
-}
 
 /* main */
+/* jumbo */
 main section.jumbotron {
   background-color: var(--main-bg-color-green);
 }
-
 .circle-red {
   width: 50px;
   height: 50px;
@@ -47,8 +44,36 @@ main section.jumbotron {
   background-color: white;
 }
 
-div.row > div > div {
+main section.jumbotron div.row > div > div {
   margin: 1em 0;
 }
 
+/* portfolio */
+div.red {
+  background-color: red;
+  width: 100%;
+  height: 5px;
+  /* margin-top: 3em; */
+}
+div.decoration {
+  width: 100%;
+  height: 5px;
+  background-color: yellow;
+  margin-top: 2em;
+}
 
+div.green {
+  background-color: green;
+  width: 100%;
+  height: 200px;
+}
+div.black {
+  background-color: black;
+  width: 100%;
+  height: 200px;
+}
+
+/* about */
+main section.about {
+  background-color: var(--main-bg-color-green);
+}
