--- a/css/style.css
+++ b/css/style.css
@@ -50,19 +50,44 @@ header div.row div.bar-icon i {
 /* jumbo */
 main section.jumbotron {
   background-color: var(--main-bg-color-green);
+  color: white;
 }
-.circle-red {
-  width: 50px;
-  height: 50px;
-  background-color: red;
+
+main section.jumbotron img.avatar {
+  width: 25%;
+}
+
+main section.jumbotron h2 {
+  font-size: 3em;
+}
+
+main section.jumbotron div.star i {
+  font-size: 1.5em;
+  margin: 0 0.8em;
+}
+
+main section.jumbotron div.col-12 > * {
+  margin-top: 0.5em;
+}
+
+main section.jumbotron div.star::before,
+main section.jumbotron div.star::after {
+  content: "";
   display: inline-block;
+  vertical-align: middle;
+  border: 1.5px solid white;
+  background-color: white;
+  width: 15%;
+  margin-bottom: 5px;
 }
-
-
-main section.jumbotron div.row > div > div {
-  margin: 1em 0;
+ul.nav-jumbo li.before-hr::before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  border: 1px solid white;
+  width: 10px;
+  margin-right: 10px;
 }
-
 /* portfolio */
 div.red {
   background-color: red;
