--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ header div.row div.bar-icon i {
     margin: 1em 0;
   }
 }
-@media screen and (min-width: 577px) {
+@media screen and (min-width: 575px) {
   header div.row div > h1 {
     font-size: 1.5em;
   }
@@ -54,7 +54,7 @@ main section.jumbotron {
 }
 
 main section.jumbotron img.avatar {
-  width: 25%;
+  width: 20%;
 }
 
 main section.jumbotron h2 {
@@ -87,6 +87,17 @@ ul.nav-jumbo li.before-hr::before {
   border: 1px solid white;
   width: 10px;
   margin-right: 10px;
+}
+
+@media screen and (max-width: 575px) {
+  main section.jumbotron img.avatar {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 575px) and (max-width: 768px) {
+  main section.jumbotron img.avatar {
+    width: 40%;
+  }
 }
 /* portfolio */
 div.red {
