--- a/css/style.css
+++ b/css/style.css
@@ -161,34 +161,29 @@ main section.about a.fake-btn {
   padding: 0.5em;
   border-radius: 5px;
 }
+main section.about a.fake-btn:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
+}
+
+main section.about a.fake-btn span.download {
+  margin-right: 0.3em;
+}
 
 
 /* contact me */
-.name {
-  height: 50px;
-  border-bottom: 1px solid red;
-  background-color: violet;
-}
-.email {
-  height: 50px;
-  border-bottom: 1px solid red;
-  background-color: crimson;
-}
-.number {
-  height: 50px;
-  border-bottom: 1px solid red;
-  background-color: chocolate;
-}
-.mex {
-  height: 50px;
-  background-color: blueviolet;
-}
-.small-black {
-  width: 100%;
-  background-color: black;
-  height: 50px;
+main section.contact-me {
+  color: black;
 }
 
+main section.contact-me a.fake-btn-end {
+  background-color: var(--main-bg-color-green);
+  color: white;
+  padding: 0.6em;
+  border-radius: 5px;
+  cursor: pointer;
+}
 /* footer */
 footer div.footer-top {
   background-color: var(--footer-bg-color);
